@@ -1,5 +1,7 @@
 package com.example.proyecto.demo.controller;
 
+import com.example.proyecto.demo.util.FileSecurityUtils;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,7 +11,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.UUID;
 
@@ -30,35 +31,30 @@ public class ConvocatoriaImagenController {
             if (file.isEmpty()) {
                 return ResponseEntity.badRequest().body(Map.of("message", "No se envió ningún archivo"));
             }
-            if (!file.getContentType().startsWith("image/")) {
-                return ResponseEntity.badRequest().body(Map.of("message", "El archivo debe ser una imagen (PNG, JPG, etc.)"));
-            }
             if (file.getSize() > MAX_SIZE) {
                 return ResponseEntity.badRequest().body(Map.of("message", "La imagen no debe superar 2 MB"));
             }
+            if (!FileSecurityUtils.isAllowedImage(file)) {
+                return ResponseEntity.badRequest().body(Map.of("message", "El archivo debe ser una imagen válida PNG, JPG, GIF o WEBP"));
+            }
 
-            Path dir = Paths.get(uploadBaseDirectory, CONVOCATORIAS_IMAGENES);
+            Path dir = Path.of(uploadBaseDirectory, CONVOCATORIAS_IMAGENES).toAbsolutePath().normalize();
             if (!Files.exists(dir)) {
                 Files.createDirectories(dir);
             }
 
-            String ext = getExtension(file.getOriginalFilename());
-            String nombre = UUID.randomUUID().toString() + (ext != null ? "." + ext : ".png");
-            Path dest = dir.resolve(nombre);
-            Files.copy(file.getInputStream(), dest);
+            String ext = FileSecurityUtils.extensionOf(file.getOriginalFilename());
+            String nombre = UUID.randomUUID() + "." + ext;
+            Path dest = FileSecurityUtils.resolveInside(dir, nombre);
+            Files.write(dest, FileSecurityUtils.stripImageMetadata(file.getBytes(), nombre));
 
             String url = "/convocatorias-imagenes/" + nombre;
             return ResponseEntity.ok(Map.of("url", url, "filename", nombre));
 
         } catch (IOException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("message", "Error al guardar la imagen: " + e.getMessage()));
+                    .body(Map.of("message", "Error al guardar la imagen"));
         }
     }
 
-    private String getExtension(String filename) {
-        if (filename == null) return null;
-        int i = filename.lastIndexOf('.');
-        return i > 0 ? filename.substring(i + 1).toLowerCase() : null;
-    }
 }
